--- a/after.html
+++ b/after.html
@@ -720,11 +720,302 @@
                     <div class="bottom-one-one">
                         <div class="bottom-img"></div>
                         <div class="bottom-border"></div>
+                        <h2>免费送货与安装</h2>
+                        <div class="bottom-border-two"></div>
+                        <div class="text">
+                            1、购货满2000元以上（特价品除外），市区范围内免费送货上门服务；
+                        </div>
+                        <div class="text">
+                            2、 购货满2000元以上（特价品除外），市区范围内免费安装、调试服务；
+                        </div>
+                        <div class="text">
+                            3、购货满2000元以上（特价品除外），在购买所在地市区范围，一年内凭客户尊享手册可享受一次免费的拆装服务（不包括搬运）。
+                        </div>
+                    </div>
+                    <div class="bottom-one-one">
+                        <div class="bottom-img"></div>
+                        <div class="bottom-border"></div>
+                        <h2>享受全国联保服务</h2>
+                        <div class="bottom-border-two"></div>
+                        <div class="text">
+                            持全国联保卡，均可在当地全友家居生活馆享受到全国统一的售后服务，
+                        </div>
+                        <div class="text">
+                            持全国联保卡，均可在当地全友家居生活馆享受一次免费上门保养服务，
+                        </div>
+                        <div class="text">
+                            持全国联保卡，从购买之日起两年内，均可在全国范围内享受免费拆装服务。（搬家、运输费用，自行承担；或享受全友家居付费服务）。
+                        </div>
+                    </div>
+                    <div class="bottom-one-one">
+                        <div class="bottom-img"></div>
+                        <div class="bottom-border"></div>
+                        <h2>保修凭证</h2>
+                        <div class="bottom-border-two"></div>
+                        <div class="text">
+                            保修卡是您要求全友履行法定“三包”义务以及全友家居标准服务的重要依据，请务必妥善保管。
+                        </div>
+                        <div class="text">
+                            当您需要全友提供保修服务时，请您出具有效的“保修卡”，或者您能够有效地证明您所购产品仍在保修期内，否则全友将无法为您提供保修服务。
+                        </div>
+                        <div class="text">
+                            如果您不能出示有效的保修卡，或保修卡所记载的信息与产品不符合，或被涂改、无法辨认，全友保留依法不提供保修服务的权利。
+                        </div>
+                        <div class="text">
+                            全友产品的保修起始日期以保修卡标明的购货日期为准。
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom-two">
+                    <div class="bottom-one-one">
+                        <div class="bottom-img"></div>
+                        <div class="bottom-border"></div>
+                        <h2>保修期限</h2>
+                        <div class="bottom-border-two"></div>
+                        <div class="text">
+                            Ø自购货日起，全友家居将为您所购产品提供保修期内的免费保修。
+                        </div>
+                        <div class="text">
+                            Ø当您在使用过程中，发现产品有任何的质量问题，请您向当地经销商提出，经销商将在24小时内和您联系，并在约定的时间内准时上门服务。
+                        </div>
+                        <div class="text">
+                            Ø您还可以通过拨打全友温馨服务热线：400-8800-315、关注“全友家居”官方微信、信件或电子邮件等多渠道与我们直接联系。
+                        </div>
+                    </div>
+                    <div class="bottom-one-one">
+                        <div class="bottom-img"></div>
+                        <div class="bottom-border"></div>
+                        <h2>保修例外</h2>
+                        <div class="bottom-border-two"></div>
+                        <div class="text">
+                            本承诺不适用于下列情况：
+                        </div>
+                        <div class="text">
+                            1、产品已经超出免费保修期；
+                        </div>
+                        <div class="text">
+                            2、产品无全友家居标识（遇此类情况请直接与销售方协商解决）；
+                        </div>
+                        <div class="text">
+                            3、未按说明书要求/错误/不当使用、保管、保养或操作产品造成的故障或损坏；
+                        </div>
+                        <div class="text">
+                            4、由非全友家居授权机构、人员修理、更改、加装或拆卸而造成的损坏。
+                        </div>
+                        <div class="text">
+                            5、因意外因素或人为原因导致的故障或损坏。
+                        </div>
+                        <div class="text">
+                            6、因自然灾害等不可抗力（如地震、火灾、雷击等）原因造成的故障或损坏。
+                        </div>
+                        <div class="text">
+                            7、对局部存在一定质量缺陷的产品进行特价处理，并且在保修卡或订货合同上注明特价产品的。
+                        </div>
+                        <div class="text">
+                            8、店面处理品、玻璃产品及配件不在免费保修范围内；凡玻璃制品，请在收到货品时仔细检查，如有问题立即提出，确认没有问题再进行安装验收。
+                        </div>
+                        <div class="text">
+                            9、产品故障是否属于质量问题由全友家居经销商和售后服务认定；若您对认定有异议时，双方可协商解决或提请国家认可的省级以上质量监督机构进行认定。
+                        </div>
+                    </div>
+                    <div class="bottom-one-one">
+                        <div class="bottom-img"></div>
+                        <div class="bottom-border"></div>
+                        <h2>优先适用</h2>
+                        <div class="bottom-border-two"></div>
+                        <div class="text">
+                            本承诺不适用于下列情况：
+                        </div>
+                        <div class="text">
+                            如果国家法律法规就售后服务另有规定的，全友家居将按照国家法律法规向您提供相应的售后服务。
+                        </div>
+                        <div class="text">
+                            对于消费者用户，全友家居服务标准低于国家法定“三包”标准的，按“三包”执行；全友家居服务标准高于“三包”标准的，按全友家居服务标准执行。
+                        </div>
+                        <div class="text">
+                            如果全友家居或当地经销商与您就产品有其他约定的，应按相应约定执行。
+                        </div>
+                        <div class="text">
+                            产品故障是否属于质量问题由全友经销商和售后服务认定；若您对认定有异议时，双方可协商解决或提请国家认可的省级以上质量监督机构进行认定。
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- 在线报修 -->
+    <div class="after-on">
+        <div class="container clearfix">
+            <div class="after-on-left">
+                <img src="./images/after/houer.jpg" alt="">
+            </div>
+            <div class="after-on-right">
+                <div class="after-on-right-one">
+                    <h2>在线报修</h2>
+                    <div class="after-on-right-one-img"></div>
+                    <div class="after-on-right-one-bottom">
+
+                    </div>
+                </div>
+                <div class="after-on-right-two">
+                    <div>
+                        <div class="name">
+                            <input type="text" placeholder="您的称谓">
+                        </div>
+                        <div class="name">
+                            <input type="text" placeholder="电话号码">
+                        </div>
+                        <div class="name">
+                            <input type="text" placeholder="所购专卖店名称">
+                        </div>
+                        <div class="name">
+                            <input type="text" placeholder="购买时间" class="time">
+                        </div>
+                        <div class="name">
+                            <textarea name="" placeholder="保修内容"></textarea>
+                        </div>
+                    </div>
+                    <button>提交</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 底部 -->
+    <div class="house-floor">
+        <div class="container">
+            <div class="house-floor-top clearfix">
+                <ul>
+                    <li>
+                        <i></i>
+                        <div class="right">
+                            <h4>灵感库</h4>
+                            <p>找到喜欢的风格</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i></i>
+                        <div class="right">
+                            <h4>样板间</h4>
+                            <p>找到喜欢的户型</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i></i>
+                        <div class="right">
+                            <h4>免费量房设计</h4>
+                            <p>让需求更有尺度</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i></i>
+                        <div class="right">
+                            <h4>DIY</h4>
+                            <p>让家魅力百变</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i></i>
+                        <div class="right">
+                            <h4>创意设计</h4>
+                            <p>找到满意的设计师</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i></i>
+                        <div class="right">
+                            <h4>个性定制</h4>
+                            <p>让您的家与众不同</p>
+                        </div>
+                    </li>
+                </ul>
+                <div class="house-floor-phone clearfix">
+                    <div class="clearfix">
+                        <i></i>24小时贴心服务
+                    </div>
+                    <p>400 - 8800 - 315</p>
+                </div>
+            </div>
+        </div>
+        <div class="house-floor-bottom">
+            <div class="house-floor-bottom-top">
+                <div class="container">
+                    <div class="left">
+                        <li>全屋样板间</li>
+                        <li>预约设计师</li>
+                        <li>家居DIY</li>
+                        <li>售后服务</li>
+                        <li>最新资讯</li>
+                    </div>
+                    <div class="right">
+                        <a href="javascript:;">
+                            <img src="./images/house/logo1.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="house-floor-bottom-mid clearfix">
+                    <div class="house-floor-one">
+                        <a href="javascript:;">卧室</a>
+                        <a href="javascript:;">客厅</a>
+                        <a href="javascript:;">餐厅</a>
+                        <a href="javascript:;">功能房</a>
+                        <a href="javascript:;">儿童房</a>
+                        <a href="javascript:;">阳台</a>
+                    </div>
+                    <div class="house-floor-one">
+                        <a href="javascript:;">金牌设计师</a>
+                    </div>
+                    <div class="house-floor-one">
+                        <a href="javascript:;">DIY</a>
+                    </div>
+                    <div class="house-floor-one">
+                        <a href="javascript:;">365服务</a>
+                        <a href="javascript:;">专卖店查询</a>
+                        <a href="javascript:;">在线报修</a>
+                    </div>
+                    <div class="house-floor-one">
+                        <a href="javascript:;">公司动态</a>
+                    </div>
+                    <div class="house-floor-two">
+                        <div class="house-floor-two-img">
+                            <img src="./images/house/qcrode1.jpg" alt="">
+                            <span>关注获取优惠信息</span>
+                        </div>
+                        <p class="tel">TEL: 86-28-66771818</p>
+                        <p>FAX: 86-28-66771818</p>
+                        <p>E-MAIL: kf@quanyou.com</p>
+                    </div>
+                    <div class="house-floor-three">
+                        <a href="javascript:;">全友家居</a>
+                        <a href="javascript:;">全友卫浴</a>
+                    </div>
+                </div>
+            </div>
+            <div class="house-floor-floor clearfix">
+                <div class="container">
+                    <div class="house-floor-floor-left">
+                        ©成都市全友家私销售有限公司
+                        <a href="javascript:;">蜀ICP备11013304号-2</a>
+                    </div>
+                    <div class="house-floor-floor-right">
+                        <p>四川省成都市青羊区成飞大道333号2栋</p>
+                        <p>Chengfei Avenue #333, Qingyang District, Chengdu, Sichuan Province</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 侧边导航 -->
+    <div class="side-nav">
+        <a href="javascript:;">咨询</a>
+        <a href="javascript:;">预约</a>
+        <a href="javascript:;">门店查询
+            <i></i>
+        </a>
+        <a href="javascript:;"></a>
+    </div>
+    <script src="./lib/日期选择插件/laydate.js"></script>
     <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="./js/after.js"></script>
 </body>
