--- a/repairs.html
+++ b/repairs.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./lib/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/repairs.css">
+    <link rel="stylesheet" type="text/css" href="./lib/jqueryimggd/css/style.css">
+    <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="./lib/jqueryimggd/js/mySystem.js"></script>
 </head>
 
 <body>
@@ -131,6 +134,47 @@
                 <a href="javascript:;">防伪查询</a>
             </div>
             <!-- 轮播图 -->
+            <div class='silder-box silder-box-1'>
+                <div class='silder'>
+                    <ul>
+                        <li>
+                            <img src="./images/repairs/slider-1.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-2.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-3.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-4.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-5.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-6.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-7.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-8.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-9.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-10.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/repairs/slider-11.jpg">
+                        </li>
+                    </ul>
+                </div>
+                <div class='silder-button btl'></div>
+                <div class='silder-button btr'></div>
+            </div>
         </div>
     </div>
     <!-- 在线报修 -->
@@ -161,7 +205,124 @@
             <div class="close"></div>
         </div>
     </div>
+    <!-- 防伪查询 -->
+    <div class="anti-fake">
+        <div class="anti-fake-content repairs-in-content">
+            <div class="anti-fake-img"></div>
+            <div class="anti-fake-input clearfix">
+                <input type="text" placeholder="请输入防伪编码">
+                <div class="button">立即查询</div>
+            </div>
+            <p>全友家居致力为您提供优质的产品和服务，为保证您的利益，</p>
+            <p>请在全友家居的指定专卖店购买产品</p>
+            <a href="#">中国质量检验协会官网</a>
+            <div class="close"></div>
+        </div>
+    </div>
+    <div class="sky"></div>
+    <!-- 底部 -->
+    <div class="qy-floor clearfix">
+        <div class="container">
+            <div class="qy-floor-one">
+                <a href="javascript:;"></a>
+                <div></div>
+            </div>
+            <div class="qy-floor-two clearfix">
+                <div class="qy-floor-two-one">
+                    <li>所有产品</li>
+                    <li>
+                        <a href="javascript:;">产品中心</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">适合你的家具</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">附近的门店</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">防伪查询</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">产品鉴赏</a>
+                    </li>
+                </div>
+                <div class="qy-floor-two-one">
+                    <li>工程项目</li>
+                    <li>
+                        <a href="javascript:;">项目介绍</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">案例展示</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我们的服务</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">联系我们</a>
+                    </li>
+                </div>
+                <div class="qy-floor-two-one">
+                    <li>幸福服务365</li>
+                    <li>
+                        <a href="javascript:;">服务介绍</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">服务流程</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">在线报修</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">防伪查询</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">常见问题</a>
+                    </li>
+                </div>
+                <div class="qy-floor-two-one">
+                    <li>联系我们</li>
+                    <li>
+                        <a href="javascript:;">我要买家具</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我要提建议</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想加入全友</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想加盟门店</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想工程合作</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想媒体合作</a>
+                    </li>
+                </div>
+            </div>
+            <div class="qy-floor-three">
+                <div class="qy-floor-three-one">
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                </div>
+                <div class="qy-floor-three-two">
+
+                </div>
+                <div class="qy-floor-three-three">
+                    关注全友人力<br> 了解更多招聘信息
+                    <a href="javascript:;">蜀ICP备11013304号-1</a>
+                </div>
+            </div>
+        </div>
+        <div class="qy-floor-bottom"></div>
+    </div>
     <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
+    <script>
+        $.noConflict(true);
+    </script>
     <script src="./js/repairs.js"></script>
 </body>
 
