--- a/repairs.html
+++ b/repairs.html
@@ -184,7 +184,7 @@
             </div>
             <div class="repairs-in-main clearfix">
                 <div class="repairs-in-name">
-                    <input type="text" placeholder="请输入您的姓名">
+                    <input type="text" value="请输入您的姓名">
                 </div>
                 <div class="repairs-in-name">
                     <input type="text" placeholder="请输入您的联系电话">
@@ -195,7 +195,7 @@
                     <input type="text" placeholder="请输入购买产品专卖店所在地">
                 </div>
                 <div class="repairs-in-name">
-                    <input type="text" placeholder="请输入产品购买时间">
+                    <input type="text" placeholder="请输入产品购买时间" class="time">
                 </div>
             </div>
             <div class="repairs-in-main clearfix">
